--- a/index.html
+++ b/index.html
@@ -41,47 +41,83 @@
 
 
  <section id="about">
-  <div class="container about-container">
-    <div class="about-text">
-      <h3>Tentang Saya</h3>
-      <p>
-  Saya adalah seorang <strong>Web Developer</strong> dan <strong>Digital Marketing Specialist</strong> yang berfokus pada pembuatan website modern, cepat, dan responsif, sekaligus mengoptimalkan visibilitasnya melalui strategi digital yang efektif. Dengan keahlian di bidang <em>HTML, CSS, JavaScript</em> serta <em>SEO, iklan digital, dan analitik</em>, saya membantu bisnis tumbuh secara online melalui solusi yang terukur dan berdampak.
-</p>
-</div>
+ <div class="container about-container">
+  <div class="about-text">
+    <h3>Tentang Saya</h3>
+    <p>
+      Saya adalah seorang <strong>Web Developer</strong>, <strong>Digital Marketing Specialist</strong>, dan <strong>Content Creator</strong> yang berfokus pada pembuatan website modern, cepat, dan responsif, sekaligus mengoptimalkan visibilitasnya melalui strategi digital yang efektif. 
+      Dengan keahlian di bidang <em>HTML, CSS, JavaScript</em> serta <em>SEO, iklan digital, analitik, dan produksi konten kreatif</em>, saya membantu bisnis tumbuh secara online melalui solusi yang terukur, menarik, dan berdampak.
+    </p>
   </div>
+</div>
+
 </section>
 
 <section id="skill">
-  <div class="container">
-    <h3 class="section-title">Skill Saya</h3>
-    <div class="skill-grid">
-      <!-- Skill 1 -->
-      <div class="skill-card">
-        <img src="https://cdn-icons-png.flaticon.com/512/732/732212.png" alt="HTML" />
-        <h4>HTML</h4>
-        <p>Bahasa markup dasar untuk membangun struktur halaman website.</p>
-      </div>
-      <!-- Skill 2 -->
-      <div class="skill-card">
-        <img src="https://cdn-icons-png.flaticon.com/512/732/732190.png" alt="CSS" />
-        <h4>CSS</h4>
-        <p>Mengatur tampilan dan desain website agar menarik dan responsif.</p>
-      </div>
-      <!-- Skill 3 -->
-      <div class="skill-card">
-        <img src="https://cdn-icons-png.flaticon.com/512/5968/5968292.png" alt="JavaScript" />
-        <h4>JavaScript</h4>
-        <p>Menambahkan interaksi dan fungsionalitas dinamis ke dalam website.</p>
-      </div>
-     
-      <!-- Skill 5 -->
-      <div class="skill-card">
-        <img src="https://cdn-icons-png.flaticon.com/512/3536/3536505.png" alt="Digital Ads" />
-        <h4>Iklan Digital</h4>
-        <p>Mengelola kampanye iklan berbayar di Google dan media sosial.</p>
-      </div>
+ <div class="container">
+  <h3 class="section-title">Skill Saya</h3>
+  <div class="skill-grid">
+    <!-- Skill 1 -->
+    <div class="skill-card">
+      <img src="https://cdn-icons-png.flaticon.com/512/732/732212.png" alt="HTML" />
+      <h4>HTML</h4>
+      <p>Bahasa markup dasar untuk membangun struktur halaman website.</p>
     </div>
+
+    <!-- Skill 2 -->
+    <div class="skill-card">
+      <img src="https://cdn-icons-png.flaticon.com/512/732/732190.png" alt="CSS" />
+      <h4>CSS</h4>
+      <p>Mengatur tampilan dan desain website agar menarik dan responsif.</p>
+    </div>
+
+    <!-- Skill 3 -->
+    <div class="skill-card">
+      <img src="https://cdn-icons-png.flaticon.com/512/5968/5968292.png" alt="JavaScript" />
+      <h4>JavaScript</h4>
+      <p>Menambahkan interaksi dan fungsionalitas dinamis ke dalam website.</p>
+    </div>
+
+    <!-- Skill 4 -->
+    <div class="skill-card">
+      <img src="https://cdn-icons-png.flaticon.com/512/3536/3536505.png" alt="Digital Ads" />
+      <h4>Iklan Digital</h4>
+      <p>Mengelola kampanye iklan berbayar di Google dan media sosial.</p>
+    </div>
+
+    <!-- Skill Canva -->
+<div class="skill-card">
+  <img src="asset/canva.png" alt="Canva" />
+  <h4>Canva</h4>
+  <p>Alat desain grafis online untuk membuat konten visual yang menarik dengan cepat.</p>
+</div>
+
+<!-- Skill Laravel -->
+<div class="skill-card">
+  <img src="asset/laravel.svg" alt="Laravel" />
+  <h4>Laravel</h4>
+  <p>Framework PHP modern untuk membangun aplikasi web dengan arsitektur MVC.</p>
+</div>
+
+<!-- Skill Figma (tetap sama) -->
+<div class="skill-card">
+  <img src="https://cdn-icons-png.flaticon.com/512/5968/5968705.png" alt="Figma" />
+  <h4>Figma</h4>
+  <p>Platform desain antarmuka dan prototyping kolaboratif berbasis cloud.</p>
+</div>
+
+<!-- Skill Content Creator -->
+<!-- Skill Content Creator -->
+<div class="skill-card">
+  <img src="https://cdn-icons-png.flaticon.com/512/8164/8164213.png" alt="Content Creator" />
+  <h4>Content Creator</h4>
+  <p>Membuat konten kreatif untuk media sosial, seperti video, desain, dan ide pemasaran digital.</p>
+</div>
+
+
   </div>
+</div>
+
 </section>
 
 <section id="projek">
@@ -163,20 +199,21 @@
     <div class="contact-info">
       
       <!-- Email -->
-      <div class="contact-item">
-        <img src="https://cdn-icons-png.flaticon.com/512/732/732200.png" alt="Email" />
-        <div>
-          <h4>Email</h4>
-          <p><a href="mailto:emailkamu@gmail.com">alvikariza5@gmail.com</a></p>
-        </div>
-      </div>
+     <div class="contact-item">
+  <img src="https://cdn-icons-png.flaticon.com/512/732/732200.png" alt="Email" />
+  <div>
+    <h4>Email</h4>
+    <p><a href="mailto:alvikariza5@gmail.com">alvikariza5@gmail.com</a></p>
+  </div>
+</div>
+
 
       <!-- WhatsApp -->
       <div class="contact-item">
         <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp" />
         <div>
           <h4>WhatsApp</h4>
-          <p><a href="https://wa.me/6281234567890" target="_blank"+>088291479186</a></p>
+          <p><a href="https://wa.me/088291479186" target="_blank"+>088291479186</a></p>
         </div>
       </div>
 
@@ -185,7 +222,7 @@
         <img src="https://cdn-icons-png.flaticon.com/512/1384/1384031.png" alt="Instagram" />
         <div>
           <h4>Instagram</h4>
-          <p><a href="https://instagram.com/akun_igkamu" target="_blank">@alvikarzaaa</a></p>
+          <p><a href="https://www.instagram.com/alvikarzaaa?igsh=bGtqYXd5NW5hOTU%3D&utm_source=qr" target="_blank">@alvikarzaaa</a></p>
         </div>
       </div>
 
