--- a/index.html
+++ b/index.html
@@ -150,45 +150,57 @@
 </section>
 
 <section id="sertifikat">
-  <div class="container">
-    <h3 class="section-title">Sertifikat</h3>
-    <div class="certificate-grid">
+<div class="container">
+  <h3 class="section-title">Sertifikat</h3>
+  <div class="certificate-grid">
 
-      <!-- Sertifikat 1 -->
-      <div class="certificate-card">
-        <img src="asset/SertifikatCSS.jpg" alt="Sertifikat 1" />
-        <div class="certificate-info">
-          <h4>Frontend Development CSS</h4>
-          <p class="date">3 November 2024</p>
-          <p>Menyelesaikan pelatihan web development CSS bersama Great Learning Academy.</p> 
-          <a href="asset/cs1.pdf" target="_blank">Lihat Sertifikat</a>
-        </div>
+    <!-- Sertifikat 1 -->
+    <div class="certificate-card">
+      <img src="asset/SertifikatCSS.jpg" alt="Sertifikat CSS" />
+      <div class="certificate-info">
+        <h4>Frontend Development CSS</h4>
+        <p class="date">3 November 2024</p>
+        <p>Menyelesaikan pelatihan web development CSS bersama Great Learning Academy.</p> 
+        <a href="asset/cs1.pdf" target="_blank">Lihat Sertifikat</a>
       </div>
+    </div>
 
-      <!-- Sertifikat 2 -->
-      <div class="certificate-card">
-        <img src="asset/SertifikatHTML.jpg" alt="Sertifikat 2" />
-        <div class="certificate-info">
-          <h4>Frontend Development HTML</h4>
-          <p class="date">25 November 2024</p>
-          <p>Menyelesaikan pelatihan web development HTML bersama Great Learning Academy.</p>
-           <a href="asset/cs2.pdf" target="_blank">Lihat Sertifikat</a>
-        </div>
+    <!-- Sertifikat 2 -->
+    <div class="certificate-card">
+      <img src="asset/SertifikatHTML.jpg" alt="Sertifikat HTML" />
+      <div class="certificate-info">
+        <h4>Frontend Development HTML</h4>
+        <p class="date">10 November 2024</p>
+        <p>Menyelesaikan pelatihan web development HTML bersama Great Learning Academy.</p>
+        <a href="asset/cs2.pdf" target="_blank">Lihat Sertifikat</a>
       </div>
+    </div>
 
-      <!-- Sertifikat 3 -->
-      <div class="certificate-card">
-        <img src="asset/SERTIF INGGRIS_page-0001.jpg" alt="Sertifikat 3" />
-        <div class="certificate-info">
-          <h4>SEMINAR LITERASI DIGITAL</h4>
-          <p class="date">20 Februari 2024</p>
-          <p>Seminar liteari digital sektor pendidikan SMKN 1 CIOMAS bersama Direktorat Pemberdayaan Informatika, Kominfo.</p>
-           <a href="asset/cs3.pdf" target="_blank">Lihat Sertifikat</a>
-        </div>
+    <!-- Sertifikat 3 -->
+    <div class="certificate-card">
+      <img src="asset/Sertifikat4.jpg" alt="Sertifikat E-Commerce" />
+      <div class="certificate-info">
+        <h4>E-COMMERCE WEBSITE WITH HTML & CSS</h4>
+        <p class="date">17 November 2024</p>
+        <p>Menyelesaikan pelatihan Website E-Commerce With HTML & CSS bersama Great Learning Academy.</p>
+        <a href="asset/cs4.pdf" target="_blank">Lihat Sertifikat</a>
       </div>
+    </div>
 
+    <!-- Sertifikat 4 (sebelumnya 3) -->
+    <div class="certificate-card">
+      <img src="asset/SERTIF INGGRIS_page-0001.jpg" alt="Sertifikat Seminar" />
+      <div class="certificate-info">
+        <h4>SEMINAR LITERASI DIGITAL</h4>
+        <p class="date">20 Februari 2024</p>
+        <p>Seminar literasi digital sektor pendidikan SMKN 1 CIOMAS bersama Direktorat Pemberdayaan Informatika, Kominfo.</p>
+        <a href="asset/cs3.pdf" target="_blank">Lihat Sertifikat</a>
+      </div>
     </div>
   </div>
+</div>
+
+
 </section>
 
 
@@ -210,12 +222,13 @@
 
       <!-- WhatsApp -->
       <div class="contact-item">
-        <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp" />
-        <div>
-          <h4>WhatsApp</h4>
-          <p><a href="https://wa.me/088291479186" target="_blank"+>088291479186</a></p>
-        </div>
-      </div>
+  <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp" />
+  <div>
+    <h4>WhatsApp</h4>
+    <p><a href="https://wa.me/6288291479186" target="_blank">088291479186</a></p>
+  </div>
+</div>
+
 
       <!-- Instagram -->
       <div class="contact-item">
